LH | feat: Рефакторинг

--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -15,13 +15,15 @@
                 >
                     Политика конфиденцильности
                 </a>
-                <span class="text-lh-primary hidden sm:block"> • </span>
+                <span class="text-lh-primary hidden sm:block">•</span>
                 <a
                     [routerLink]="['/public-offer']"
                     class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100 self-start"
                 >
                     Публичная оферта
                 </a>
+                <span class="text-lh-primary hidden sm:block">•</span>
+                <a class="text-blue-400 !cursor-default font-bold self-start">Версия 1.0.1 beta</a>
             </div>
         </div>
     </div>
