--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -23,6 +23,7 @@
                 ratingPlace="2"
                 [type]="getTypeLabel()"
                 [count]="getCount(leaderBoard[1])"
+                [userImage]="getUserAvatar(leaderBoard[1]?.user_id)"
             />
             <app-leader-card
                 [playerName]="leaderBoard[0]?.name ?? ''"
@@ -30,12 +31,14 @@
                 [isBigSize]="true"
                 [count]="getCount(leaderBoard[0])"
                 [type]="getTypeLabel()"
+                [userImage]="getUserAvatar(leaderBoard[0]?.user_id)"
             />
             <app-leader-card
                 [playerName]="leaderBoard[2]?.name ?? ''"
                 ratingPlace="3"
                 [count]="getCount(leaderBoard[2])"
                 [type]="getTypeLabel()"
+                [userImage]="getUserAvatar(leaderBoard[2]?.user_id)"
             />
         </div>
     }
@@ -43,30 +46,37 @@
     <div class="flex flex-col gap-6">
         @for (item of leaderBoard; track $index; let odd = $odd) {
             @if ($index > 2) {
-                <div class="flex gap-4">
-                    <div>
-                        <div
-                            [style.backgroundImage]="'url(/br.jpg)'"
-                            class="size-16 flex bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
-                        >
-                            <div class="flex size-full justify-center items-center p-3 z-30">
-                                <p class="text-3xl my-6 uppercase font-bold text-[#bdb093] self-center">
-                                    {{ $index + 1 }}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="h-16 bg-lh-primary transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat relative rounded-4xl before:brightness-60 object-center shadow-2xl before:rounded-4xl before:size-full before:absolute before:!backdrop-blur-2xl before:z-10"
+                <div
+                    class="h-36 test relative transform transition duration-500 hover:scale-[101%] hover:cursor-pointer flex size-full bg-cover bg-repeat rounded-2xl object-center shadow-2xl before:z-10"
+                >
+                    <p
+                        class="absolute ml-12 self-center justify-self-start text-5xl uppercase font-bold text-[#bdb093]"
                     >
-                        <div
-                            class="flex w-full justify-between gap-6 items-center px-8 p-4 z-30 text-neutral-200 text-2xl/7.5"
-                        >
-                            <img src="3.webp" class="size-12 rounded-full" />
-                            <p class="font-semibold">{{ item.name }}</p>
-                            <p class="font-semibold" *ngIf="activeItemIndex === 0">{{ item.deaths }}</p>
-                            <p class="font-semibold" *ngIf="activeItemIndex === 1">{{ item.hours_played }}</p>
-                            <p class="font-semibold" *ngIf="activeItemIndex === 2">{{ item.kills }}</p>
+                        {{ $index + 1 }}
+                    </p>
+                    <div class="flex w-full justify-center gap-6 items-center z-30 text-neutral-200 text-2xl/7.5">
+                        <div class="flex flex-col gap-4 justify-center items-center">
+                            <div class="flex bg-[#EEDFC9] rounded-2xl p-3 gap-4 items-center">
+                                @if (getUserAvatar(item.user_id)) {
+                                    <img
+                                        [src]="getUserAvatar(item.user_id)"
+                                        class="size-8 rounded-full"
+                                        alt="Аватар игрока"
+                                    />
+                                } @else {
+                                    <tui-icon icon="@tui.user" class="size-8 text-lh-primary-2" />
+                                }
+                                <p class="font-semibold text-lh-primary-2">{{ item.name }}</p>
+                            </div>
+                            <p class="font-extrabold text-4xl text-shadow-lg" *ngIf="activeItemIndex === 0">
+                                {{ item.deaths }}
+                            </p>
+                            <p class="font-bold text-4xl text-shadow-lg" *ngIf="activeItemIndex === 1">
+                                {{ item.hours_played }}
+                            </p>
+                            <p class="font-bold text-4xl text-shadow-lg" *ngIf="activeItemIndex === 2">
+                                {{ item.kills }}
+                            </p>
                         </div>
                     </div>
                 </div>
