--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -17,10 +17,10 @@
                     class="absolute flex flex-col justify-start left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white w-[90%] px-4 py-6"
                 >
                     <!-- Заголовок -->
-                    <h2 class="text-8xl font-bold mb-4 uppercase !text-shadow-lg">{{ item.header }}</h2>
+                    <h2 class="text-4xl lg:text-8xl font-bold mb-4 uppercase !text-shadow-lg">{{ item.header }}</h2>
 
                     <!-- Текст под заголовком -->
-                    <p [innerHTML]="item.body" class="text-4xl font-medium !text-shadow-lg"></p>
+                    <p [innerHTML]="item.body" class="text-2xl lg:text-4xl font-medium !text-shadow-lg"></p>
                 </div>
             </div>
         }
