--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.html
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.html
@@ -7,12 +7,14 @@
 }
 @if (leaderBoard) {
     <tui-tabs [(activeItemIndex)]="activeItemIndex" class="!text-xl mt-4 mb-16 !font-semibold !w-full content-tabs">
-        <button tuiTab type="button" (click)="getDeaths()" class="text-2xl/7.5 uppercase !font-bold">По смертям</button>
+        <button tuiTab type="button" (click)="getDeaths()" class="text-2xl/7.5 uppercase !font-bold">
+            {{ isMobile ? "Смерти" : "По смертям" }}
+        </button>
         <button tuiTab type="button" (click)="getHoursPlayed()" class="text-2xl/7.5 uppercase !font-bold">
-            По онлайну
+            {{ isMobile ? "Онлайн" : "По онлайну" }}
         </button>
         <button tuiTab type="button" (click)="getKills()" class="text-2xl/7.5 uppercase !font-bold">
-            По убийствам
+            {{ isMobile ? "Убийства" : "По убийствам" }}
         </button>
     </tui-tabs>
 
