--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -37,7 +37,7 @@
                 <tui-copy><b>play.lasthearth.ru</b></tui-copy>
                 <br />
                 Пароль:
-                <tui-copy><b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b></tui-copy>
+                <tui-copy class="copy-word"><b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b></tui-copy>
             </p>
         </div>
     </div>
