LH | create-news

--- a/last-hearth-landing/src/app/profile/admin/create-news/create-news.component.html
+++ b/last-hearth-landing/src/app/profile/admin/create-news/create-news.component.html
@@ -1,41 +1,46 @@
 <div class="p-6">
-    <p class="text-2xl/7.5">Создание новостей</p>
+    <p class="text-3xl/7.5 font-bold">Создание новостей</p>
     <form [formGroup]="form" (ngSubmit)="onSubmit.next()" class="flex flex-col gap-2 mt-4">
-        <p class="text-xl/7.5">Заголовок новости</p>
-        <l-input formControlName="title" placeholder="Придумайте заголовок вашей новости..." class="w-full"></l-input>
+        <p class="text-2xl/7.5">Заголовок новости</p>
+        <l-input formControlName="title" placeholder="Придумайте заголовок новости..." class="w-full" />
         <tui-error formControlName="title" [error]="[] | tuiFieldError | async" />
 
-        <p class="text-xl/7.5">Содержание новости</p>
+        <p class="text-2xl/7.5">Содержание новости</p>
         <l-input
             formControlName="content"
-            placeholder="Придумайте содержание вашей новости..."
+            placeholder="Придумайте содержание новости..."
             class="w-full"
             type="textarea"
-        ></l-input>
+        />
         <tui-error formControlName="content" [error]="[] | tuiFieldError | async" />
 
-        <p class="text-xl/7.5">Изображение новости</p>
+        <p class="text-2xl/7.5">Изображение новости</p>
 
-        <label *ngIf="!form.controls.preview.value" tuiInputFiles>
-            <ng-template tuiInputFilesContent>
-                <span class="text-gray-600">Добавить изображение...</span>
-                <input accept="image/*" tuiInputFiles formControlName="preview" />
-            </ng-template>
-        </label>
+        @if (!form.controls.preview.value) {
+            <label tuiInputFiles>
+                <ng-template tuiInputFilesContent>
+                    <span class="text-gray-600">Добавить изображение...</span>
+                    <input accept="image/*" tuiInputFiles formControlName="preview" />
+                </ng-template>
+            </label>
+        }
 
-        <tui-files class="tui-space_top-1">
-            <tui-file
-                *ngIf="form.controls.preview.value | tuiFileRejected: { accept: 'image/*' } | async as file"
-                state="error"
-                [file]="file"
-                (remove)="removeFile()"
-            />
+        <tui-files>
+            @if (form.controls.preview.value | tuiFileRejected: { accept: "image/*" } | async; as file) {
+                <tui-file state="error" [file]="file" (remove)="removeFile()" />
+            }
 
-            <tui-file *ngIf="loadedFiles$ | async as file" [file]="file" (remove)="removeFile()" />
+            @if (loadingFile$ | async; as file) {
+                <tui-file state="loading" [file]="file" (remove)="removeFile()" />
+            }
 
-            <tui-file *ngIf="failedFiles$ | async as file" state="error" [file]="file" (remove)="removeFile()" />
+            @if (failedFile$ | async; as file) {
+                <tui-file state="error" [file]="file" (remove)="removeFile()" />
+            }
 
-            <tui-file *ngIf="loadingFiles$ | async as file" state="loading" [file]="file" (remove)="removeFile()" />
+            @if (loadedFile$ | async; as file) {
+                <tui-file [file]="file" (remove)="removeFile()" />
+            }
         </tui-files>
 
         <tui-error formControlName="preview" [error]="[] | tuiFieldError | async" />
@@ -47,7 +52,7 @@
             Создать новость
         </button>
 
-        <p class="text-2xl/7.5 text-center p-6">Предпросмотр новости</p>
+        <p class="text-2xl/7.5 text-center p-2">Предпросмотр новости</p>
 
         <app-news-card
             title="{{ form.controls.title.value || 'Введите заголовок новости...' }}"
