--- a/last-hearth-landing/src/app/profile/admin/admin.component.html
+++ b/last-hearth-landing/src/app/profile/admin/admin.component.html
@@ -27,6 +27,7 @@
             </p>
         </button>
         <button tuiTab type="button">Создать вопрос</button>
+
         <button tuiTab type="button">Создать новость</button>
     </tui-tabs>
 
@@ -52,7 +53,7 @@
                 <app-create-question-form />
             }
             @case (3) {
-                <p class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">В разработке...</p>
+                <app-create-news />
             }
         }
     </div>
