LH | feat: version add

--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -23,7 +23,7 @@
                     Публичная оферта
                 </a>
                 <span class="text-lh-primary hidden sm:block">•</span>
-                <a class="text-blue-400 !cursor-default font-bold self-start">Версия 1.0.1 beta</a>
+                <a class="text-blue-400 !cursor-default font-bold self-start">Версия 1.1.2 beta от 12.11.2025</a>
             </div>
         </div>
     </div>
